# src/main/resources/api.yaml
@@ -32,6 +32,11 @@ paths:
           schema:
             type: string
 
+        - in: query
+          name: searchQuery
+          schema:
+            type: string
+
       responses:
         '200':
           description: Successful operation
@@ -343,16 +348,3 @@ components:
         portions:
           type: integer
           description: The number of portions the recipe yields
-
-
-    PaginationRequest:
-      type: object
-      properties:
-        page:
-          type: integer
-          default: 0
-        size:
-          type: integer
-          default: 20
-        sort:
-          type: string
